# ML_and_Rust

./: .gitignore
tutorial_1/read_csv/: Cargo.toml
tutorial_1/read_csv/src/: reader.rs
tutorial_1/regression/rust-regression/: Cargo.toml
tutorial_1/regression/rust-regression/src/: linear_regression.rs  main.rs
tutorial_1/regression/smartcore-regression/: Cargo.toml
tutorial_1/regression/smartcore-regression/src/: linear_regression.rs
tutorial_2/datasets/: 2d_array.csv  boston_dataset.csv
tutorial_2/polars_learning/: Cargo.toml
tutorial_2/polars_learning/src/: main.rs
tutorial_2/smartcore_linear_regression/: Cargo.toml
tutorial_2/smartcore_linear_regression/src/: main.rs
tutorial_3/conv_nnet/src/: main.rs
tutorial_3/custom_nnet/: Cargo.toml
tutorial_3/custom_nnet/src/: main.rs
tutorial_3/simple_neural_networks/: Cargo.toml
tutorial_3/simple_neural_networks/src/: download.rs  main.rs
