[package]
name = "read_csv"
version = "0.1.0"
authors = ["Steboss89"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.126"

# since we are going to import this funciton into a script we have to define the libraries
# the library will be called read_csv and we can access to irts functions with read_csv::
[lib]
name = "read_csv"
path = "src/reader.rs"