[package]
name = "simple_neural_networks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tch = "0.8.0"
reqwest = "0.11.11"
tempfile = "3.3.0"
io = "0.0.2"
mnist = {version = "0.5.0", features = ["download"]}
ndarray = "0.15.6"

