[package]
name = "rust-regression"
version = "0.1.0"
authors = ["Steboss89"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# to get the rusty-machine simply go to crates.io and copy the version you want
smartcore = "0.2.0"
serde = "1.0.126"
serde_derive = "1.0.126"
read_csv = {path = "../../read_csv"}
# to read_csv custom module point to that module

